--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,13 @@
 {
   "compilerOptions": {
+    "lib": [
+      "es5",
+      "es6",
+      "es7",
+      "dom"
+    ],
     "target": "es5",
-    "module": "esnext"
+    "module": "esnext",
+    "jsx": "react"
   }
 }
