--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     ],
     "target": "es5",
     "module": "esnext",
-    "jsx": "react"
+    "jsx": "react",
+    "moduleResolution": "node"
   }
 }
