--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "better-npm-run": "^0.1.0",
     "clean-webpack-plugin": "0.1.17",
     "html-webpack-plugin": "2.30.1",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "typescript": "2.5.3",
     "webpack": "3.7.1",
     "webpack-bundle-analyzer": "^2.9.0"
@@ -39,10 +41,13 @@
   "dependencies": {
     "axios": "^0.17.0",
     "core-js": "^2.5.1",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "style-loader": "^0.19.0"
   }
 }
