--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "typescript": "2.5.3",
+    "url-loader": "^0.6.2",
     "webpack": "3.7.1",
     "webpack-bundle-analyzer": "^2.9.0"
   },
