--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "awesome-typescript-loader": "3.2.3",
     "better-npm-run": "^0.1.0",
     "clean-webpack-plugin": "0.1.17",
+    "file-loader": "^1.1.5",
     "html-webpack-plugin": "2.30.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
