--- a/package.json
+++ b/package.json
@@ -1,55 +1,45 @@
 {
-  "name": "rr-ts-starter",
+  "name": "kosmetic",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.tsx",
+  "description": "kosmetic site",
+  "main": "webpack.config.js",
   "scripts": {
-    "start": "better-npm-run dev",
-    "build": "better-npm-run build"
+    "build-dev": "set NODE_ENV=development&& babel-node server.js",
+    "build-prod": "set NODE_ENV=production&& webpack && babel-node server.js"
   },
-  "betterScripts": {
-    "dev": {
-      "command": "webpack-dev-server",
-      "env": {
-        "NODE_ENV": "development"
-      }
-    },
-    "build": {
-      "command": "webpack",
-      "env": {
-        "NODE_ENV": "production"
-      }
-    }
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mallky/kosmetic.git"
   },
-  "author": "",
+  "author": "Makar Kuzmichev",
   "license": "ISC",
-  "devDependencies": {
-    "@types/core-js": "^0.9.43",
-    "@types/react": "16.0.10",
-    "@types/react-dom": "16.0.1",
-    "@types/react-redux": "^5.0.10",
-    "awesome-typescript-loader": "3.2.3",
-    "better-npm-run": "^0.1.0",
-    "clean-webpack-plugin": "0.1.17",
-    "file-loader": "^1.1.5",
-    "html-webpack-plugin": "2.30.1",
-    "less": "^2.7.3",
-    "less-loader": "^4.0.5",
-    "typescript": "2.5.3",
-    "url-loader": "^0.6.2",
-    "webpack": "3.7.1",
-    "webpack-bundle-analyzer": "^2.9.0"
+  "bugs": {
+    "url": "https://github.com/mallky/kosmetic/issues"
   },
+  "homepage": "https://github.com/mallky/kosmetic#readme",
   "dependencies": {
-    "axios": "^0.17.0",
-    "core-js": "^2.5.1",
+    "express": "^4.16.2",
+    "file-system": "^2.2.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-router": "^3.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^7.2.3",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "react": "16.0.0",
-    "react-dom": "16.0.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0",
-    "style-loader": "^0.19.0"
+    "html-webpack-plugin": "^2.30.1",
+    "postcss-loader": "^2.0.9",
+    "precss": "^2.0.0",
+    "react-hot-loader": "^3.0.0",
+    "style-loader": "^0.19.1",
+    "webpack": "^3.10.0",
+    "webpack-config": "^7.5.0",
+    "webpack-dev-middleware": "^2.0.1",
+    "webpack-hot-middleware": "^2.21.0"
   }
 }
