--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "html-webpack-plugin": "2.30.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "nodemon": "^1.14.12",
     "typescript": "2.5.3",
     "url-loader": "^0.6.2",
     "webpack": "3.7.1",
@@ -44,12 +45,20 @@
     "axios": "^0.17.0",
     "core-js": "^2.5.1",
     "css-loader": "^0.28.7",
+    "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "style-loader": "^0.19.0"
+    "request": "^2.83.0",
+    "style-loader": "^0.19.0",
+    "body-parser": "~1.18.2",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "morgan": "~1.9.0",
+    "nodemon": "^1.14.12",
+    "serve-favicon": "~2.4.5"
   }
 }
