--- a/package.json
+++ b/package.json
@@ -42,14 +42,17 @@
   },
   "dependencies": {
     "axios": "^0.17.0",
+    "body-parser": "^1.18.2",
     "core-js": "^2.5.1",
     "css-loader": "^0.28.7",
+    "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "request": "^2.83.0",
     "style-loader": "^0.19.0"
   }
 }
